@startuml InterectSystem_Class
title Interaction System - Class Diagram

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

package "Player" {
  class PlayerController {
    - rayInteract : RayInteract
    - filterInteract : FilterInteract
    + OnInteract(context : InputAction.CallbackContext)
  }

  class RayInteract {
    + searchRadius : float
    + itemLayer : LayerMask
    + target : GameObject
    + FindClosestItem() : GameObject
  }

  class Inventory {
    + Weapons : List<Item>
    + Consumables : List<Item>
    + Coins : int
    + AddWeapon(item : Item)
    + AddConsumable(item : Item)
    + AddCoins(amount : int)
    + SpendCoins(amount : int) : bool
  }
}

package "Interaction Core" {
  interface IInteractable {
    + Interact(player : GameObject)
  }

  interface IPickable {
    + GetItemData() : ItemData
  }

  interface IInteractive {
    + GetInteractionName() : string
    + CanInteract(player : GameObject) : bool
  }

  class FilterInteract {
    - player : GameObject
    + FilterInteract(playerGameObject : GameObject)
    + FilterAndExecute(target : GameObject) : bool
    + GetInteractionType(target : GameObject) : string
    - ExecutePickup(pickable : IPickable)
    - ExecuteInteractive(interactive : IInteractive)
  }
}

package "Pickable" {
  class ItemPickup {
    + itemData : ItemData
    + GetItemData() : ItemData
    + Interact(player : GameObject)
    + Pickup(inventory : Inventory)
  }
}

package "Interactive Objects" {
  abstract class InteractiveObject {
    # interactionName : string
    + GetInteractionName() : string
    + CanInteract(player : GameObject) : bool
    + Interact(player : GameObject)
    # ExecuteInteraction()
  }

  class Chest {
    - randomItem : RandomItem
    - isOpened : bool
    - animator : Animator
    - openAnimationTrigger : string
    + GetInteractionName() : string
    # ExecuteInteraction()
    - SpawnReward(reward : GameObject)
  }

  abstract class InteractiveSlotSellItem {
    # interactionName : string
    + GetInteractionName() : string
    + CanInteract(player : GameObject) : bool
    + Interact(player : GameObject)
    # ExecuteInteraction(player : GameObject)
  }

  class SlotSellItem {
    - IsSold : bool
    - ItemGameObject : GameObject
    + SetItem(item : GameObject)
    + GetInteractionName() : string
    # ExecuteInteraction(player : GameObject)
  }
}

IInteractable <|-- IPickable
IInteractable <|-- IInteractive

IPickable <|.. ItemPickup
IInteractive <|.. InteractiveObject
IInteractive <|.. InteractiveSlotSellItem

InteractiveObject <|-- Chest
InteractiveSlotSellItem <|-- SlotSellItem

PlayerController --> RayInteract : reads target
PlayerController --> FilterInteract : FilterAndExecute(target)
FilterInteract --> IPickable : checks / executes
FilterInteract --> IInteractive : checks / executes

ItemPickup --> Inventory : add item
SlotSellItem --> Inventory : spend coins
Chest --> ItemPickup : spawns reward prefab

note right of FilterInteract
Priority:
1. IPickable
2. IInteractive
3. otherwise return false
end note

@enduml

@startuml InterectSystem_Sequence
title Interaction System - Sequence Diagram

actor Player
participant PlayerController
participant RayInteract
participant FilterInteract
participant "Target GameObject" as Target
participant IPickable
participant IInteractive
participant Inventory

Player -> PlayerController : press Interact
PlayerController -> RayInteract : read target

alt target == null
  PlayerController --> Player : return
else target found
  PlayerController -> FilterInteract : FilterAndExecute(target)
  FilterInteract -> Target : GetComponent<IPickable>()

  alt target implements IPickable
    FilterInteract -> IPickable : Interact(player)
    IPickable -> Inventory : add weapon/consumable
    IPickable --> FilterInteract : success
  else not pickable
    FilterInteract -> Target : GetComponent<IInteractive>()

    alt target implements IInteractive and CanInteract == true
      FilterInteract -> IInteractive : CanInteract(player)
      IInteractive --> FilterInteract : true
      FilterInteract -> IInteractive : Interact(player)
      IInteractive --> FilterInteract : success
    else target cannot interact
      FilterInteract --> PlayerController : false
    end
  end

  FilterInteract --> PlayerController : true/false
end

@enduml
